k8s/nginx-ingress-letsencrypt/ingress-welcome.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-welcome
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app.welcome.com
    secretName: welcome-tls 
  rules:
  - host: app.welcome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-welcome
            port:
              number: 80
